<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App 100</string>

    <string name="action_settings">Settings</string>
    <string name="action_language">עברית</string>
    <string name="action_logout">Logout</string>


    <string name="other">Other</string>
    <string name="report">Report</string>
    <string name="make_a_call">Call 100</string>
    <string name="your_location">Location</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Description</string>
    <string name="send">Send</string>
    <string name="more_details">Describe here what was happened.\nProvide details as much as you can.</string>

    <string name="car_accident">Car Accident</string>
    <string name="number_of_involved">Number of involved</string>
    <string name="vehicle_registration">Vehicles registration (Cars ID)</string>
    <string name="vehicle_registration_hint">e.g. 90-980-09, 72-123-25</string>

    <string name="domestic_violence">Domestic Violence</string>

    <string name="car_theft">Car Theft</string>


    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_sign_up">Login/Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_verification">Send Verification</string>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>


</resources>
